# sqlitePlusPlus

./: CMakeLists.txt  sqlitePlusPlus.pc.in
include/: sqlitePP.hpp
src/: DatabaseModel.cpp  DatabaseModel.hpp  SqliteTable.cpp  SqliteTable.hpp  sqlitePP.cpp
test/: CMakeLists.txt  UTDatabaseModel.cpp  UTSqliteTable.cpp  mylib_test.cpp
